gpu: devfreq: adrenoboost: correct leveling errors
Fixing up last_level value for correct mapping.
Adding initial value last_level to be lowest possible freq.

Conflicts:
	arch/arm/boot/dts/qcom/msm8996-v3.dtsi

--- a/arch/arm/boot/dts/qcom/msm8996-v3.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-v3.dtsi
@@ -117,6 +117,8 @@
 
 			qcom,speed-bin = <0>;
 
+			qcom,initial-pwrlevel = <6>;
+
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
 				qcom,gpu-freq = <624000000>;
