state_notifier: added new driver for on/off operations

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -636,3 +636,5 @@ CONFIG_DRV2604L_HAPTICS=y
 CONFIG_LETVS_CLASS=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_QUICK_WAKEUP=y
+CONFIG_POWERSUSPEND=y
+CONFIG_STATE_NOTIFIER=y
