Enable quickwakeup driver

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -635,3 +635,4 @@ CONFIG_LAST_KMSG_LETV=y
 CONFIG_DRV2604L_HAPTICS=y
 CONFIG_LETVS_CLASS=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_QUICK_WAKEUP=y
