--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -641,3 +641,5 @@ CONFIG_POWERSUSPEND=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_FORCE_FAST_CHARGE=y 
+CONFIG_FINGERPRINT_BOOST=y
