--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -40,6 +40,18 @@ CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_FORCE=y
 CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
+CONFIG_IOSCHED_SWITCHER=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_MAPLE=y 
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_MAPLE is not set
+CONFIG_CGROUP_BFQIO=y
+CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_PCI_MSM=y
@@ -66,6 +78,18 @@ CONFIG_PM_RUNTIME=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTRON is not set
+CONFIG_CPU_FREQ_GOV_ELECTRON=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
