--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1,5 +1,5 @@
-CONFIG_LOCALVERSION="-perf"
 CONFIG_SYSVIPC=y
+CONFIG_LOCALVERSION="-AMIGOSv1.0"
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
