--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -88,6 +88,7 @@ CONFIG_CPU_FREQ_GOV_ELECTRON=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -670,3 +671,4 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_FORCE_FAST_CHARGE=y 
 CONFIG_FINGERPRINT_BOOST=y
+CONFIG_CPU_INPUT_BOOST=y
